Fixed h1 spacing for responsiveness.

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,7 @@ a:hover {
 h1 {
   font-family: 'PT Sans Narrow', sans-serif;
   font-weight: bold;
+  margin-top:55px;
 }
 
 h2 {
